Fixed Carousel cards screen for tablets

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -16,8 +16,8 @@
   </div>
 
 </section>
-<section class="container1">
-  <article class="container-cards">
+<section class="container1 w-full h-full">
+  <article class="container-cards justify-center w-max h-max">
       <div class="cards1">
           <div class="cards-item">
               <img src="/images/c1.webp" loading="lazy" alt="talenland24">
