--- a/src/components/logos.astro
+++ b/src/components/logos.astro
@@ -4,11 +4,11 @@ import { Icon } from "astro-icon/components";
 ---
 
 
-<section class="carousel-container mt-24">
+<section class="carousel-container content-center items-center w-max h-max  md:w-full md:h-full  lg:w-max lg:h-max ">
   <div class="carousel-title">
-    <h3 class="text-center text-4xl lg:text-6xl md:text-8xl ">I work with this technologies</h2>
+    <h3 class="text-center text-2xl lg:text-6xl md:text-4xl ">I work with this technologies</h2>
   </div>
-  <article class="carousel-track flex gap-1 md:gap-5 items-center justify-center mt-10">
+  <article class="carousel-track h-max lg:h-full md:h-full flex gap-1 md:gap-5 items-center justify-center mt-10">
     <div class="carousel-item">
       <Icon class="size-10 md:size-16" name="simple-icons:python" />
     </div>
