--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -10,8 +10,8 @@
 
 .container-cards {
   
-  width: 25rem;
-  height: 25rem;
+  width: 100%;
+  height: 100%;
   perspective: 2400px;
   
 }
@@ -93,17 +93,28 @@
   }
 
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1024px) {
+  .container1 {
+    height: 100vh;
+    max-width: 94vw;
+  }
+   
+  .container-cards {
+    width: 16rem;
+    height: 16rem;
+    perspective: 2200px;
+  }
+}
+
+@media screen and (min-width: 1336px) {
   .container1 {
     height: 100vh;
     max-width: 92vw;
   }
    
   .container-cards {
-    width: 12rem;
-    height: 12rem;
-    perspective: 1600px;
-    
-   
+    width: 22rem;
+    height: 22rem;
+    perspective: 2600px;
   }
 }
