--- a/src/pages/experience.astro
+++ b/src/pages/experience.astro
@@ -72,7 +72,7 @@ const { courses } = basics;
     Training & Certifications
     </h2>
   </div>
-  <div class="cv-section w-full grid grid-cols-2 md:w-full lg:w-max md:grid-cols-3 gap-6 ">
+  <div class="cv-section w-full grid grid-cols-2 md:w-max lg:grid-cols-3 gap-6">
     {courses.map((course) => (
       <GridCourse {...course} />
     ))}
