vercel analitycs and speed insights actived

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,6 +11,7 @@ import "@fontsource-variable/inter/index.css";
 import '@fontsource-variable/bricolage-grotesque';
 import '../styles/carousel.css';
 import '../styles/cards.css';
+import  SpeedInsights  from "@vercel/speed-insights/astro"
 
 
 export interface Props {
@@ -64,6 +65,7 @@ const makeTitle = title
   <body>
     <Navbar />
     <slot />
+    <SpeedInsights />
     <Footer />
     <style is:global>
       /* Improve Page speed */
