--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -3,6 +3,7 @@ import { Picture } from "astro:assets";
 import heroImage from "@assets/gatovsky.webp";
 import Link from "@components/ui/link.astro";
 import { Icon } from "astro-icon/components";
+import '../styles/cards.css';
 ---
 
 <main
@@ -32,8 +33,8 @@ import { Icon } from "astro-icon/components";
         Cloud Engineer
       </h2>
       <p class="text-xl mt-4 text-slate-600 max-w-xl">
-        It´s me, Inge Gatovsky, a Cloud Engineer with a passion for technology and
-        innovation. I´m a fan of the cloud and all the possibilities it offers.
+        With a passion for technology and
+        innovation.
       </p>
     </div>
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
@@ -43,7 +44,7 @@ import { Icon } from "astro-icon/components";
         class="flex gap-1 items-center justify-center"
         rel="noopener">
         <Icon class="font-mplus text-white w-5 h-5" name="bx:bx-at" />
-         Contact Me
+         Contact
       </Link>
       <Link
         size="lg"
