--- a/src/components/logos.astro
+++ b/src/components/logos.astro
@@ -1,12 +1,13 @@
 ---
 // @ts-ignore
 import { Icon } from "astro-icon/components";
+import '../styles/carousel.css';
 ---
 
 
 <section class="carousel-container content-center items-center w-max h-max  md:w-full md:h-full  lg:w-max lg:h-max ">
   <div class="carousel-title">
-    <h3 class="text-center text-2xl lg:text-6xl md:text-4xl ">I work with this technologies</h2>
+    <h3 class="text-center text-2xl lg:text-6xl md:text-4xl ">Gatovsky stack</h2>
   </div>
   <article class="carousel-track h-max lg:h-full md:h-full flex gap-1 md:gap-5 items-center justify-center mt-10">
     <div class="carousel-item">
@@ -22,7 +23,7 @@ import { Icon } from "astro-icon/components";
       <Icon class="size-10 md:size-16" name="simple-icons:pulumi" />
     </div>
     <div class="carousel-item">
-      <Icon class="size-10 md:size-16" name="simple-icons:redhat" />
+      <Icon class="size-10 md:size-16" name="simple-icons:linux" />
     </div>
     <div class="carousel-item">
       <Icon class="size-10 md:size-16" name="simple-icons:jenkins" />
@@ -41,34 +42,37 @@ import { Icon } from "astro-icon/components";
     </div>
     <!-- Duplicate items for seamless looping -->
     <div class="carousel-item">
-      <Icon class="size-10 md:size-16" name="simple-icons:python" />
+      <Icon class="size-10 md:size-16" name="simple-icons:terraform" />
     </div>
     <div class="carousel-item">
-      <Icon class="size-10 md:size-16" name="simple-icons:docker" />
+      <Icon class="size-10 md:size-16" name="simple-icons:gnubash" />
     </div>
     <div class="carousel-item">
-      <Icon class="size-10 md:size-16" name="simple-icons:kubernetes" />
+      <Icon class="size-10 md:size-16" name="simple-icons:javascript" />
     </div>
     <div class="carousel-item">
-      <Icon class="size-10 md:size-16" name="simple-icons:pulumi" />
+      <Icon class="size-10 md:size-16" name="simple-icons:flask" />
     </div>
     <div class="carousel-item">
-      <Icon class="size-10 md:size-16" name="simple-icons:redhat" />
+      <Icon class="size-10 md:size-16" name="simple-icons:django" />
     </div>
     <div class="carousel-item">
-      <Icon class="size-10 md:size-16" name="simple-icons:jenkins" />
+      <Icon class="size-10 md:size-16" name="simple-icons:amazondynamodb" />
     </div>
     <div class="carousel-item">
-      <Icon class="size-10 md:size-16" name="simple-icons:amazonaws" />
+      <Icon class="size-10 md:size-16" name="simple-icons:awslambda" />
     </div>
     <div class="carousel-item">
-      <Icon class="size-10 md:size-16" name="simple-icons:mysql" />
+      <Icon class="size-10 md:size-16" name="simple-icons:amazonapigateway" />
     </div>
     <div class="carousel-item">
-      <Icon class="size-10 md:size-16" name="simple-icons:postgresql" />
+      <Icon class="size-10 md:size-16" name="simple-icons:swagger" />
     </div>
     <div class="carousel-item">
-      <Icon class="size-10 md:size-16" name="simple-icons:git" />
+      <Icon class="size-10 md:size-16" name="simple-icons:astro" />
+    </div>
+    <div class="carousel-item">
+      <Icon class="size-10 md:size-16" name="simple-icons:tailwindcss" />
     </div>
   </article>
 </section>
