Some path for main carousel

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -19,7 +19,7 @@ const CDN_IMAGE = import.meta.env.CDN_URL;
   </div>
 
 </section>
-<section class="container1 w-full h-full">
+<section class="container1 w-full h-full max-w-screen md:pl-14">
   <article class="container-cards justify-center w-max h-max">
       <div class="cards1">
           <div class="cards-item">
