Fixed linear animation

--- a/src/components/logos.astro
+++ b/src/components/logos.astro
@@ -44,12 +44,12 @@ const {stack} = cv;
       transform: translateX(0);
     }
     100% {
-      transform: translateX(calc(-100%));
+      transform: translateX(calc(-70% - 2rem));
     }
   }
 
   .animate-slide-logos {
     display: flex;
-    animation: slide 90s linear infinite;
+    animation: slide 30s linear infinite;
   }
 </style>
