Some changes in cv page

--- a/src/pages/experience.astro
+++ b/src/pages/experience.astro
@@ -33,7 +33,7 @@ const { courses } = basics;
     <p
       class="text-muted-foreground sm:text-center text-sm sm:text-normal md:text-lg font-light tracking-tighter"
     >
-      Here are some of the places I've worked at.
+    Know gatovsky's professional career
     </p>
   </div>
   <div class="cv-section flex flex-col pointer-events-auto">
@@ -72,7 +72,7 @@ const { courses } = basics;
     Training & Certifications
     </h2>
   </div>
-  <div class="cv-section w-full grid grid-cols-2 md:w-max lg:grid-cols-3 gap-6">
+  <div class="cv-section w-full pr-10 md:pr-0 lg:pr-0 grid grid-cols-2 md:w-max lg:grid-cols-3 gap-6">
     {courses.map((course) => (
       <GridCourse {...course} />
     ))}
@@ -84,7 +84,7 @@ const { courses } = basics;
       class="flex gap-1 items-center justify-center"
       rel="noopener">
       <Icon class="font-mplus text-white w-5 h-5" name="bx:bx-at" />
-       Contact Me
+       Contact
     </Link>
     <Link
       size="lg"
@@ -94,7 +94,7 @@ const { courses } = basics;
       class="flex gap-1 items-center justify-center"
       target="_blank">
       <Icon class="font-mplus text-black w-4 h-4" name="bx:bxl-github" />
-      GitHub Repo
+      GitHub
     </Link>
   </div>
   <script src="../scripts/observer.js"></script>
