portfolio page added

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -31,6 +31,11 @@ const menuitems = [
     target: "_self"
   },
   {
+    title: "Portfolio",
+    path: "/portfolio",
+    target: "_self"
+  },
+  {
     title: "Contact",
     path: "/contact",
     target: "_self"
