--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -14,7 +14,7 @@ const {projects} = cv;
       <Fragment slot="desc"></Fragment>
     </Sectionhead>
     <section class="w-full flex flex-col content-center items-center mt-16">
-      <div class="w-full max-w-2xl flex flex-col items-start gap-3f">
+      <div class="w-full min-h-full max-w-2xl flex flex-col items-start gap-3f">
         {
           projects.map((project) => (
             <PortfolioCard {...project} />
