--- a/src/components/portfoliocard.astro
+++ b/src/components/portfoliocard.astro
@@ -151,7 +151,7 @@ const { name, subname, image, author, platform, stack, description, source, demo
   text-align: right;
 }
 .blog-card .description .read-more a {
-  color: #000000;
+  color: rgb(51 65 85); /* slate-700 */
   display: inline-block;
   position: relative;
 }
@@ -177,7 +177,7 @@ const { name, subname, image, author, platform, stack, description, source, demo
   content: "";
   position: absolute;
   height: 5px;
-  background: #000000;
+  background: rgb(51 65 85); /* slate-700 */
   width: 35px;
   top: -0.75rem;
   border-radius: 3px;
