--- a/src/pages/portfolio/[slug].astro
+++ b/src/pages/portfolio/[slug].astro
@@ -26,7 +26,7 @@ const date = formatDate(project.date, "year"); // year, year-month, year-month-d
                   <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="m10 17l5-5m0 0l-5-5" />
                 </svg>
               </span>
-              <h1 class="text-2xl">{project.name}</h1>
+              <h1 class="text-lg md:text-xl md:text-2-xl">{project.name}</h1>
               <div>
                 <span class="text-sm font-medium ml-2 bg-fuchsia-200 text-fuchsia-500 border border-fuchsia-300 rounded-md px-1.5 py-0.5">{date}—</span>
               </div>
@@ -91,7 +91,7 @@ const date = formatDate(project.date, "year"); // year, year-month, year-month-d
         </div>
         <div class="flex justify-center items-center pt-4">
             <button type="button" class="flex justify-center items-center me-4 h-full cursor-pointer group focus:outline-none" data-carousel-prev>
-                <span class="text-gray-400 hover:text-gray-900 dark:hover:text-white group-focus:text-gray-900 dark:group-focus:text-white">
+                <span class="text-slate-400 hover:text-slate-900 dark:hover:text-white group-focus:text-slate-900 dark:group-focus:text-white">
                     <svg class="rtl:rotate-180 w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5H1m0 0 4 4M1 5l4-4"/>
                     </svg>
@@ -99,7 +99,7 @@ const date = formatDate(project.date, "year"); // year, year-month, year-month-d
                 </span>
             </button>
             <button type="button" class="flex justify-center items-center h-full cursor-pointer group focus:outline-none" data-carousel-next>
-                <span class="text-gray-400 hover:text-gray-900 dark:hover:text-white group-focus:text-gray-900 dark:group-focus:text-white">
+                <span class="text-slate-400 hover:text-slate-900 dark:hover:text-white group-focus:text-slate-900 dark:group-focus:text-white">
                     <svg class="rtl:rotate-180 w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                     </svg>
