--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -11,9 +11,9 @@ import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 const menuitems = [
   {
     title: "Gatovsky",
-    path: "#",
+    path: "/",
     children: [
-      { title: "Projects", path: "https://www.hharieta.lat/works", target: "_blank" },
+      { title: "Projects", path: "/portfolio", target: "_self" },
       { title: "Curriculum Vitae", path: "/experience", target: "_self"},
       { title: "Hobby", path: "/404", target: "_self"},
       { title: "Social media", path: "/404", target: "_parent" },
