--- a/src/pages/portfolio/[slug].astro
+++ b/src/pages/portfolio/[slug].astro
@@ -26,7 +26,7 @@ const date = formatDate(project.date, "year"); // year, year-month, year-month-d
                   <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="m10 17l5-5m0 0l-5-5" />
                 </svg>
               </span>
-              <h1 class="text-lg md:text-xl md:text-2-xl">{project.name}</h1>
+              <h1 class="text-md md:text-xl md:text-2-xl">{project.name}</h1>
               <div>
                 <span class="text-sm font-medium ml-2 bg-fuchsia-200 text-fuchsia-500 border border-fuchsia-300 rounded-md px-1.5 py-0.5">{date}—</span>
               </div>
