--- a/src/pages/portfolio/[slug].astro
+++ b/src/pages/portfolio/[slug].astro
@@ -68,7 +68,7 @@ const date = formatDate(project.date, "year"); // year, year-month, year-month-d
                 <div class="ms-px">
                   <span class="uppercase bg-fuchsia-200 text-fuchsia-500 border border-fuchsia-300 rounded-md px-1.5 py-0.5">Demo</span>
                 </div>
-                <a href={project.demo} class="hover:text-fuchsia-500">{project.demo}</a>
+                <a href={project.demo} target="_blank" class="hover:text-fuchsia-500">{project.demo}</a>
               </li>
             </ul>
         </div>
