--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -84,6 +84,10 @@ const makeTitle = title
       .font-handlee{
         font-family: "Handlee", sans-serif;
       }
+      .font-bricolage{
+        font-family: 'Bricolage Grotesque', sans-serif;
+      }
     </style>
+    <script src="flowbite/dist/flowbite.min.js"></script>
   </body>
 </html>
