Fixed warning for non main landmark

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -61,7 +61,9 @@ const makeTitle = title
   </head>
   <body>
     <Navbar />
-    <slot />
+    <main>
+      <slot />
+    </main>
     <Footer />
     <style is:global>
       /* Improve Page speed */
