--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -73,7 +73,7 @@ const menulanguages = [
 <header>
   <Astronav>
     <nav class="bg-white border-gray-200 dark:bg-gray-900">
-      <div class="max-w-screen-2xl flex flex-wrap items-center justify-between mx-auto p-4">
+      <div class="max-w-screen-2xl flex flex-wrap items-center justify-between mx-auto px-0 py-0 md:px-4">
       <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
           <div class="pt-4">
             <img src="/images/gatovsky.svg" class="w-14 h-14 lg:w-16 lg:h-16" loading="eager" alt="Inge Gatovsky" />
