--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -6,8 +6,8 @@ import { Icon } from "astro-icon/components";
 import '../styles/cards.css';
 ---
 
-<main
-  class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
+<section
+  class="grid lg:grid-cols-2 items-center pt-16 pb-8 md:pt-12 md:pb-24">
   <article class="py-6 md:order-1 hidden md:block rounded-ms">
     <Picture
       src={heroImage}
@@ -24,7 +24,7 @@ import '../styles/cards.css';
     />
   </article>
   <article>
-    <div>
+    <div class="pl-0">
       <h1
         class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
         Inge Gatovsky
@@ -58,4 +58,4 @@ import '../styles/cards.css';
       </Link>
     </div>
   </article>
-</main>
+</section>
