aria-hidden elements porperly used

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -11,7 +11,7 @@
     Made with 😻 by <a
       href="https://www.hharieta.lat"
       target="_blank"
-      rel="noopener"
+      rel="noopener noreferrer"
       class="hover:underline">
       Inge Gatovsky
     </a>
