--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -81,7 +81,7 @@ const menulanguages = [
       </a>
       <div class="flex items-center md:order-2 space-x-1 md:space-x-0 rtl:space-x-reverse">
           <button type="button" data-dropdown-toggle="language-dropdown-menu" class="inline-flex items-center font-medium justify-center px-4 py-2 text-sm text-gray-900 dark:text-white rounded-lg cursor-pointer hover:bg-gray-100 dark:hover:bg-gray-700 dark:hover:text-white">
-            <img src={menulanguages[0].image} alt={menulanguages[0].code} class="w-5 h-5 rounded-full me-3" aria-hidden="true"/>
+            <img src={menulanguages[0].image} alt={menulanguages[0].code} class="w-5 h-5 rounded-full me-3" />
             {menulanguages[0].name}
           </button>
           <!-- Dropdown -->
@@ -92,7 +92,7 @@ const menulanguages = [
                   <li>
                     <a href={item.url} class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">
                       <div class="inline-flex items-center">
-                        <img src={item.image} alt={item.name} aria-hidden="true" class="h-3.5 w-3.5 rounded-full me-2"/>
+                        <img src={item.image} alt={item.name}  class="h-3.5 w-3.5 rounded-full me-2"/>
                         <span>{item.name}</span>
                       </div>
                     </a>
@@ -103,7 +103,7 @@ const menulanguages = [
           </div>
           <button data-collapse-toggle="navbar-language" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-language" aria-expanded="false">
             <span class="sr-only">Open main menu</span>
-            <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+            <svg class="w-5 h-5"  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
             </svg>
         </button>
