--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -79,7 +79,7 @@ const CDN_IMAGE = import.meta.env.CDN_URL;
             href={social.url}
             target="_blank"
             class="flex gap-1 items-center justify-center"
-            rel="noopener">
+            rel="noopener noreferrer">
             <Icon class="font-mplus rounded-full w-4 h-4" name={social.name} />
             {social.network}
           </Link>
