--- a/src/components/awardscard.astro
+++ b/src/components/awardscard.astro
@@ -30,7 +30,7 @@ const formattedStartDate = formatter.format(parseDate(date));
   <div class="md:col-span-2 flex flex-col gap-3 ">
     <div class="flex flex-col gap-1">
       <h3 class="text-muted-foreground text-slate-500 text-lg sm:text-normal">
-        <a href={url} target="_blank" class=" hover:text-gray-900">{title}</a>
+        <a href={url} target="_blank" rel="noopener noreferrer" class=" hover:text-gray-900">{title}</a>
       </h3>
       <h4 class="text-lg sm:text-normal md:text-xl tracking-tighter">
         {awarder}
