--- a/src/pages/experience.astro
+++ b/src/pages/experience.astro
@@ -82,14 +82,14 @@ const { courses } = basics;
       href="mailto:&#99;&#111;&#110;&#116;&#97;&#99;&#116;&#111;&#64;&#104;&#104;&#97;&#114;&#105;&#101;&#116;&#97;&#46;&#108;&#97;&#116;"
       target="_blank"
       class="flex gap-1 items-center justify-center"
-      rel="noopener">
+      rel="noopener noreferrer">
       <Icon class="font-mplus text-white w-5 h-5" name="bx:bx-at" />
        Contact
     </Link>
     <Link
       size="lg"
       style="outline"
-      rel="noopener"
+      rel="noopener noreferrer"
       href="https://github.com/hharieta"
       class="flex gap-1 items-center justify-center"
       target="_blank">
