--- a/src/pages/portfolio/[slug].astro
+++ b/src/pages/portfolio/[slug].astro
@@ -104,7 +104,7 @@ const date = formatDate(project.date, "year"); // year, year-month, year-month-d
         <div class="flex justify-center items-center pt-4">
             <button type="button" class="flex justify-center items-center me-4 h-full cursor-pointer group focus:outline-none" data-carousel-prev>
                 <span class="text-slate-400 hover:text-slate-900 dark:hover:text-white group-focus:text-slate-900 dark:group-focus:text-white">
-                    <svg class="rtl:rotate-180 w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                    <svg class="rtl:rotate-180 w-5 h-5"  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5H1m0 0 4 4M1 5l4-4"/>
                     </svg>
                     <span class="sr-only">Previous</span>
@@ -112,7 +112,7 @@ const date = formatDate(project.date, "year"); // year, year-month, year-month-d
             </button>
             <button type="button" class="flex justify-center items-center h-full cursor-pointer group focus:outline-none" data-carousel-next>
                 <span class="text-slate-400 hover:text-slate-900 dark:hover:text-white group-focus:text-slate-900 dark:group-focus:text-white">
-                    <svg class="rtl:rotate-180 w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                    <svg class="rtl:rotate-180 w-5 h-5"  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                     </svg>
                     <span class="sr-only">Next</span>
