--- a/src/components/logos.astro
+++ b/src/components/logos.astro
@@ -12,7 +12,7 @@ const {stack} = cv;
   <div class="w-full h-fit max-w-3xl flex flex-col justify-center select-none overflow-hidden gradient">
     <div class="w-max flex flex-nowrap gap-[4rem] animate-slide-logos">
       {
-        stack.map((item) => (
+        stack.concat(stack).map((item) => (
         <Icon class="size-14 object-containt" name={item.name} />
       ))
       }
@@ -44,7 +44,7 @@ const {stack} = cv;
       transform: translateX(0);
     }
     100% {
-      transform: translateX(calc(-70% - 2rem));
+      transform: translateX(calc(-50% - 2rem));
     }
   }
 
