--- a/src/pages/experience.astro
+++ b/src/pages/experience.astro
@@ -23,7 +23,7 @@ const { courses } = basics;
   class="w-full flex flex-col gap-10  content-center items-center justify-center px-4 py-20 sm:py-24 overflow-hidden"
 >
   <div
-    class="cv-section w-full max-w-2xl flex flex-col justify-center items-start sm:items-center gap-3"
+    class="s-animation w-full max-w-2xl flex flex-col justify-center items-start sm:items-center gap-3"
   >
     <h2
       class="text-4xl sm:text-lg md:text-2xl tracking-tighter"
@@ -36,11 +36,11 @@ const { courses } = basics;
     Know gatovsky's professional career
     </p>
   </div>
-  <div class="cv-section flex flex-col pointer-events-auto">
+  <div class="s-animation flex flex-col pointer-events-auto">
     {experience.map((exp) => <ExperienceCard {...exp} />)}
   </div>
   <div
-    class="cv-section w-full max-w-2xl flex flex-col justify-center items-start sm:items-center gap-3"
+    class="s-animation w-full max-w-2xl flex flex-col justify-center items-start sm:items-center gap-3"
   >
     <h2
       class="text-4xl sm:text-lg md:text-2xl tracking-tighter"
@@ -48,11 +48,11 @@ const { courses } = basics;
       Education
     </h2>
   </div>
-  <div class="cv-section flex flex-col pointer-events-auto">
+  <div class="s-animation flex flex-col pointer-events-auto">
     {education.map((edu) => <EducationCard {...edu} />)}
   </div>
   <div
-    class="cv-section w-full max-w-2xl flex flex-col justify-center items-start sm:items-center gap-3"
+    class="s-animation w-full max-w-2xl flex flex-col justify-center items-start sm:items-center gap-3"
   >
     <h2
       class="text-4xl sm:text-lg md:text-2xl tracking-tighter"
@@ -60,11 +60,11 @@ const { courses } = basics;
       Awards
     </h2>
   </div>
-  <div class="cv-section flex flex-col pointer-events-auto">
+  <div class="s-animation flex flex-col pointer-events-auto">
     {awards.map((awd) => <AwardsCard {...awd} />)}
   </div>
   <div
-    class="cv-section  w-full max-w-2xl flex flex-col justify-center items-start sm:items-center gap-3"
+    class="s-animation  w-full max-w-2xl flex flex-col justify-center items-start sm:items-center gap-3"
   >
     <h2
       class="text-4xl sm:text-lg md:text-2xl tracking-tighter"
@@ -72,7 +72,7 @@ const { courses } = basics;
     Training & Certifications
     </h2>
   </div>
-  <div class="cv-section w-full pr-10 md:pr-0 lg:pr-0 grid grid-cols-2 md:w-max lg:grid-cols-3 gap-6">
+  <div class="s-animation w-full pr-10 md:pr-0 lg:pr-0 grid grid-cols-2 md:w-max lg:grid-cols-3 gap-6">
     {courses.map((course) => (
       <GridCourse {...course} />
     ))}
@@ -101,13 +101,13 @@ const { courses } = basics;
 </section>
 </Container>
 <style>
-  .cv-section {
+.s-animation {
   opacity: 0;
   transform: translateY(50px);
   transition: opacity 0.6s ease-out, transform 0.6s ease-out;
 }
 
-.cv-section.visible {
+.s-animation.visible {
   opacity: 1;
   transform: translateY(0);
 }
