--- a/src/pages/portfolio/[slug].astro
+++ b/src/pages/portfolio/[slug].astro
@@ -62,7 +62,9 @@ const date = formatDate(project.date, "year"); // year, year-month, year-month-d
                 <div>
                     {
                       project.stack.map((item) => (
-                        <span class="bg-blue-200 text-blue-800 border border-blue-300 rounded-md px-1.5 py-0.5 mr-4">{item}</span>
+                        <div class="inline-block py-0.5">
+                          <span class="bg-blue-200 text-blue-800 border border-blue-300 rounded-md px-1.5 py-0.5 mr-4">{item}</span>
+                        </div>
                       ))
                     }
                 </div>
@@ -100,7 +102,7 @@ const date = formatDate(project.date, "year"); // year, year-month, year-month-d
                     project.source ? (
                       /^(http|https):\/\/[^\s$.?#].[^\s]*$/.test(project.source) ? (
                         <a href={project.source} target="_blank" rel="noopener noreferrer" class="bg-blue-200 text-blue-800 border border-blue-300 rounded-md px-1.5 py-0.5 hover:text-blue-300 hover:bg-blue-800">
-                          {project.source}
+                          {project.name}
                         </a>
                       ) : (
                         <span class="bg-blue-200 text-blue-800 border border-blue-300 rounded-md px-1.5 py-0.5">Not available</span>
