--- a/src/components/portfoliocard.astro
+++ b/src/components/portfoliocard.astro
@@ -35,7 +35,7 @@ const slug = name.toLowerCase().replace(/\s+/g, '-');
   </a>
 </div>
 
-<!-- 
+
 <script>
   document.addEventListener('DOMContentLoaded', function() {
     const elements = document.querySelectorAll('.animate');
@@ -53,4 +53,4 @@ const slug = name.toLowerCase().replace(/\s+/g, '-');
       observer.observe(element);
     });
   });
-</script> -->
+</script>
