--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -1,6 +1,5 @@
 ---
-import '../styles/cards.css';
-const CDN_IMAGE = import.meta.env.CDN_URL;
+
 ---
 
 <section class="my-5">
@@ -19,37 +18,58 @@ const CDN_IMAGE = import.meta.env.CDN_URL;
   </div>
 
 </section>
-<section class="container1 w-full h-full max-w-screen md:pl-14">
-  <article class="container-cards justify-center w-max h-max">
-      <div class="cards1">
-          <div class="cards-item">
-              <img src={`${CDN_IMAGE}/images/c1.webp`} loading="eager" alt="talenland24">
-          </div>
-          <div class="cards-item">
-              <img src={`${CDN_IMAGE}/images/c2.webp`} loading="eager" alt="itcancun">
-          </div>
-          <div class="cards-item">
-              <img src={`${CDN_IMAGE}/images/c3.webp`} loading="eager" alt="tajamar">
-          </div>
-          <div class="cards-item">
-              <img src={`${CDN_IMAGE}/images/c4.webp`} loading="eager" alt="jon maddog">
-          </div>
-          <div class="cards-item">
-            <img src={`${CDN_IMAGE}/images/c5.webp`} loading="eager" alt="genius arena 2024">
-          </div>
-          <div class="cards-item">
-            <img src={`${CDN_IMAGE}/images/c6.webp`} loading="eager" alt="birthday">
-          </div>
-          <div class="cards-item">
-            <img src={`${CDN_IMAGE}/images/c7.webp`} loading="eager" alt="genius arena 2024">
-          </div>
-          <div class="cards-item">
-            <img src={`${CDN_IMAGE}/images/c8.webp`} loading="eager" alt="flutter app">
-          </div>
-          <div class="cards-item">
-            <img src={`${CDN_IMAGE}/images/c9.webp`} loading="eager" alt="gatovsky">
-          </div>
+<section class=" pt-10 pb-5">
+
+
+<div id="default-carousel" class="relative w-full" data-carousel="slide">
+  <!-- Carousel wrapper -->
+  <div class="relative h-44 overflow-hidden rounded-lg md:h-[28rem] md:rounded-xl lg:h-[36rem] lg:rounded-2xl">
+       <!-- Item 1 -->
+      <div class="hidden duration-700 ease-in-out" data-carousel-item>
+          <img src="https://cdn.glitch.global/f8dc0126-7e62-42eb-b9b3-c1d569626a06/cachedImage.png?v=1722060629541" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
       </div>
-  </article>
-  <script src="../scripts/cards.js"></script>
+      <!-- Item 2 -->
+      <div class="hidden duration-700 ease-in-out" data-carousel-item>
+          <img src="https://cdn.glitch.global/f8dc0126-7e62-42eb-b9b3-c1d569626a06/IMG_3603.jpeg?v=1722060613925" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+      </div>
+      <!-- Item 3 -->
+      <div class="hidden duration-700 ease-in-out" data-carousel-item>
+          <img src="https://cdn.glitch.global/f8dc0126-7e62-42eb-b9b3-c1d569626a06/cachedImage%202.png?v=1722060627499" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+      </div>
+      <!-- Item 4 -->
+      <div class="hidden duration-700 ease-in-out" data-carousel-item>
+          <img src="https://cdn.glitch.global/f8dc0126-7e62-42eb-b9b3-c1d569626a06/IMG_6018.jpeg?v=1722071439609" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+      </div>
+      <!-- Item 5 -->
+      <div class="hidden duration-700 ease-in-out" data-carousel-item>
+          <img src="https://cdn.glitch.global/f8dc0126-7e62-42eb-b9b3-c1d569626a06/IMG_5870.jpeg?v=1722060530216" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+      </div>
+  </div>
+  <!-- Slider indicators -->
+  <div class="absolute z-30 flex -translate-x-1/2 bottom-5 left-1/2 space-x-3 rtl:space-x-reverse">
+      <button type="button" class="w-3 h-3 rounded-full" aria-current="true" aria-label="Slide 1" data-carousel-slide-to="0"></button>
+      <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 2" data-carousel-slide-to="1"></button>
+      <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 3" data-carousel-slide-to="2"></button>
+      <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 4" data-carousel-slide-to="3"></button>
+      <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 5" data-carousel-slide-to="4"></button>
+  </div>
+  <!-- Slider controls -->
+  <button type="button" class="absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
+      <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+          <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
+          </svg>
+          <span class="sr-only">Previous</span>
+      </span>
+  </button>
+  <button type="button" class="absolute top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-next>
+      <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+          <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+          </svg>
+          <span class="sr-only">Next</span>
+      </span>
+  </button>
+</div>
+
 </section>
