--- a/src/components/logos.astro
+++ b/src/components/logos.astro
@@ -6,11 +6,11 @@ const {stack} = cv;
 ---
 
 <section class="relative flex flex-col w-full text-center justify-center items-center gap-10 px-4 py-20 sm:py-24  pointer-events-none">
-  <h3 class="absolute top-[-20px] h-10 flex items-center px-2 py-1 text-2xl sm:text-normal md:text-3xl tracking-tighter bg-card">
+  <h3 class="absolute top-10 h-10 flex items-center px-2 py-1 text-2xl sm:text-normal md:text-3xl tracking-tighter bg-card">
     Gatovsky stack
   </h3>
   <div class="w-full h-fit max-w-3xl flex flex-col justify-center select-none overflow-hidden gradient">
-    <div class="w-max flex flex-nowrap gap-[4rem] animate-slide-logos">
+    <div class="w-max flex flex-nowrap gap-[4rem] pt-10 animate-slide-logos">
       {
         stack.concat(stack).map((item) => (
         <Icon class="size-14 object-containt" name={item.name} />
