--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -6,8 +6,8 @@ import { Icon } from "astro-icon/components";
 ---
 
 <section
-  class="grid lg:grid-cols-2 items-center pt-16 pb-8 md:pt-12 md:pb-24">
-  <article class="py-6 md:order-1 hidden md:block rounded-ms">
+  class="flex items-center pt-16 pb-8 md:pt-12 md:pb-24">
+  <article class="py-6 md:order-1 w-full hidden md:inline-block rounded-ms">
     <Picture
       src={heroImage}
       alt="Inge Gatovsky"
@@ -22,7 +22,7 @@ import { Icon } from "astro-icon/components";
        }}
     />
   </article>
-  <article>
+  <article class="w-full">
     <div class="pl-0">
       <h1
         class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
